<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".LoginActivity"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="146dp">

        <LinearLayout
            android:id="@+id/linearLayoutEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/textViewNama"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textColor="@color/red"
                android:textSize="50sp"
                android:textStyle="bold"
                android:gravity="center"
                android:text="@string/hatoca" />
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/relativeLayoutInputEmail"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutEmail">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/email_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/email_inp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/email" />
            </com.google.android.material.textfield.TextInputLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/rl_pass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="8dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/relativeLayoutInputEmail">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/pass_hint"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginEnd="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/pass_inp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password" />
            </com.google.android.material.textfield.TextInputLayout>

        </RelativeLayout>

        <LinearLayout
            android:id="@+id/rl_forgot_pass"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="4dp"
            app:layout_constraintTop_toBottomOf="@id/rl_pass">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="12dp"
                android:text="@string/forgot_pass"
                android:gravity="end"/>

        </LinearLayout>

        <RelativeLayout
            android:id="@+id/button_login"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:layout_constraintTop_toBottomOf="@id/rl_forgot_pass"
            android:layout_marginTop="32dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/login_button"
                android:layout_width="270dp"
                android:layout_marginStart="18dp"
                android:backgroundTint="@color/red"
                android:text="@string/LOGIN"
                android:layout_height="wrap_content" />

            <Button
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_toEndOf="@+id/login_button"
                android:width="8dp"
                android:backgroundTint="@color/red" />

        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="100dp"
            android:layout_marginStart="80dp"
            app:layout_constraintTop_toBottomOf="@id/button_login"
            app:layout_constraintStart_toStartOf="parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/SignUpQ"
                android:gravity="center"/>

            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#0000"
                    android:text="@string/signup_text"
                    android:textColor="@color/red" />
            </RelativeLayout>

        </LinearLayout>


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>