<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".LoginActivity"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="46dp">

        <LinearLayout
            android:id="@+id/layout_greet"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:textSize="26sp"
                android:gravity="center"
                android:textColor="#b5b19a"
                android:text="@string/greet"/>
        </LinearLayout>

        <RelativeLayout
            android:id="@+id/relativeLayoutCardQuotes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/layout_greet">
            <androidx.cardview.widget.CardView
                android:id="@+id/cardQuotes"
                android:layout_width="320dp"
                android:layout_height="82dp"
                android:layout_margin="24sp"
                app:cardCornerRadius="24dp"
                app:cardElevation="7dp"
                android:layout_centerInParent="true">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|top">
                    <TextView
                        android:id="@+id/number"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black"
                        android:textSize="30sp"
                        android:layout_marginTop="8dp"
                        android:text="@string/number"/>

                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center|bottom">
                    <TextView
                        android:id="@+id/quotes_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textColor="#b5b19a"
                        android:layout_marginBottom="8dp"
                        android:text="@string/text_greet"/>

                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/button_row_1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="8dp"
            app:layout_constraintTop_toBottomOf="@id/relativeLayoutCardQuotes">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="16dp"
                    app:cardCornerRadius="18dp">

                    <ImageView
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:adjustViewBounds="true"
                        android:src="@drawable/lucky_draw" />
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="16dp"
                    app:cardCornerRadius="18dp">

                    <ImageView
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:adjustViewBounds="true"
                        android:src="@drawable/book_test_drive" />
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="16dp"
                    app:cardCornerRadius="18dp">

                    <ImageView
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:adjustViewBounds="true"
                        android:src="@drawable/book_service" />
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="16dp"
                    app:cardCornerRadius="18dp">

                    <ImageView
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:adjustViewBounds="true"
                        android:src="@drawable/ths" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/button_row_2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/button_row_1">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="16dp"
                    app:cardCornerRadius="18dp">

                    <ImageView
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:adjustViewBounds="true"
                        android:src="@drawable/catalog" />
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="16dp"
                    app:cardCornerRadius="18dp">

                    <ImageView
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:adjustViewBounds="true"
                        android:src="@drawable/calculator" />
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="16dp"
                    app:cardCornerRadius="18dp">

                    <ImageView
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:adjustViewBounds="true"
                        android:src="@drawable/claim_insurance" />
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="16dp"
                    app:cardCornerRadius="18dp">

                    <ImageView
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:adjustViewBounds="true"
                        android:src="@drawable/service_berkala" />
                </androidx.cardview.widget.CardView>
            </LinearLayout>
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/button_row_3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="8dp"
            android:layout_marginTop="24dp"
            app:layout_constraintTop_toBottomOf="@id/button_row_2">
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="16dp"
                    app:cardCornerRadius="18dp">

                    <ImageView
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:adjustViewBounds="true"
                        android:src="@drawable/tips_and_trick" />
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="16dp"
                    app:cardCornerRadius="18dp">

                    <ImageView
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:adjustViewBounds="true"
                        android:src="@drawable/trade_in" />
                </androidx.cardview.widget.CardView>
                <androidx.cardview.widget.CardView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="16dp"
                    app:cardCornerRadius="18dp">

                    <ImageView
                        android:layout_width="56dp"
                        android:layout_height="56dp"
                        android:adjustViewBounds="true"
                        android:src="@drawable/dealer_location" />
                </androidx.cardview.widget.CardView>

            </LinearLayout>
        </RelativeLayout>




    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>